# tufty2040-badge

./: CMakeLists.txt  main.cpp  monster_data.h
display/: badge_fonts.h  display_manager.cpp  display_manager.h  screen_printer.cpp  screen_printer.h
modules/: badge_module.cpp  badge_module.h  module_manager.cpp  module_manager.h
modules/impl/: hello_nametag.cpp  hello_nametag.h  module_select.cpp  module_select.h  random_monster.cpp  random_monster.h
utility/: board_manager.cpp  board_manager.h  rand_utils.cpp  rand_utils.h
